--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "ant-design-vue": "^4.0.4",
     "core-js": "^3.6.5",
+    "sass": "^1.69.4",
     "scss": "^0.2.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
