--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,20 +17,34 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    permissions:
+      pages: write
+      id-token: write
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # 1 将代码仓库的内容拉取到工作目录中
       - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: yarn build
+      # 2 安装Node, 并设置版本为18
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          yarn add,
-          yarn build.
+      # 3 安装依赖
+      - run: npm run clean:cache
+      
+      # 4 构建项目 (构建文档)
+      - run: npm run docs:build:oneKey
+      
+      # 5 上传构建产物 (actions/upload-artifact@v3 会上传工作流程中的文件, 允许您在作业之间共享数据并在工作流程完成后存储数据)
+      - uses: actions/upload-pages-artifact@v2
+        with:
+          path: "./docs/.vitepress/dist"
+
+      # 6 部署 Github Pages
+      - uses: actions/deploy-pages@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
