--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -37,7 +37,7 @@ jobs:
       - run: npm i
       
       # 4 构建项目 (构建文档)
-      - run: npm run docs:build:oneKey
+      # - run: npm run docs:build:oneKey
       
       # 5 上传构建产物 (actions/upload-artifact@v3 会上传工作流程中的文件, 允许您在作业之间共享数据并在工作流程完成后存储数据)
       - uses: actions/upload-pages-artifact@v2
