--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -40,9 +40,9 @@ jobs:
       # - run: npm run docs:build:oneKey
       
       # 5 上传构建产物 (actions/upload-artifact@v3 会上传工作流程中的文件, 允许您在作业之间共享数据并在工作流程完成后存储数据)
-      - uses: actions/upload-pages-artifact@v2
-        with:
-          path: "./docs/.vitepress/dist"
+      # - uses: actions/upload-pages-artifact@v2
+        # with:
+          # path: "./docs/.vitepress/dist"
 
       # 6 部署 Github Pages
       - uses: actions/deploy-pages@v2
